Add missing tests : SpotBugs, PITest, JaCoCo (>90%), Selenium