@@ -41,7 +41,117 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.5.4</version>
+        <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <argLine>${jacocoArgLine}</argLine>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+              <propertyName>jacocoArgLine</propertyName>
+              <destFile>${project.build.directory}/jacoco.exec</destFile>
+              <append>true</append>
+            </configuration>
+          </execution>
+          <execution>
+            <id>report-and-check</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <rule>
+                  <element>BUNDLE</element>
+                  <limits>
+                    <limit>
+                      <counter>INSTRUCTION</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.90</minimum>
+                    </limit>
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>${spotbugs.plugin.version}</version>
+        <configuration>
+          <failOnError>true</failOnError>
+          <effort>Max</effort>
+          <threshold>Low</threshold>
+          <excludeFilterFile>${project.basedir}/spotbugs-exclude.xml</excludeFilterFile>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.pitest</groupId>
+        <artifactId>pitest-maven</artifactId>
+        <version>${pitest.plugin.version}</version>
+        <configuration>
+          <targetClasses>
+            <param>fr.uha.ensisa.gl.tarnished.*</param>
+          </targetClasses>
+          <targetTests>
+            <param>fr.uha.ensisa.gl.tarnished.*</param>
+          </targetTests>
+          <mutationThreshold>70</mutationThreshold>
+          <threads>2</threads>
+          <withHistory>true</withHistory>
+          <verbose>true</verbose>
+          <jvmArgs>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.io=ALL-UNNAMED</jvmArg>
+            <jvmArg>--add-opens</jvmArg>
+            <jvmArg>java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
+          </jvmArgs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>mutation-test</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>mutationCoverage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-junit5-plugin</artifactId>
+            <version>1.2.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
